testing build and push jobs

--- a/src/frontend/static/styles/cart.css
+++ b/src/frontend/static/styles/cart.css
@@ -18,6 +18,7 @@
     padding-bottom: 120px;
     padding-top: 56px;
     background-color: #F9F9F9;
+    border: 2px solid red
 }
 
 .cart-sections h3 {
